<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ECDE</string>

    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account /&#160;</string>
    <string name="sign_in">Sign In</string>
    <string name="tap_to_change">Tap To Change</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="version">Version -&#160;</string>
    <string name="edit_product">Edit Product</string>
    <string name="product_description">Product Description</string>
    <string name="give_your_product_a_short_and_clear_title">Give your product a short and clear title.</string>
    <string name="give_your_product_a_short_and_clear_description">Give your product a short and clear description.</string>
    <string name="product_price">Product Price (R$)</string>
    <string name="choose_product_image">Choose Product Image</string>
    <string name="update_product">UPDATE PRODUCT</string>
    <string name="all_categories">All Categories</string>
    <string name="welcome_to_ecde">Welcome to ECDE</string>
    <string name="sell_within_the_app_make_offers_and_nbuy_from_people_you_trust">Sell within the app, make offers and\nbuy from people you trust</string>
    <string name="if_you_are_new">If you are new /&#160;</string>
    <string name="create_new">Create New</string>
    <string name="forgot_password">Forgot Password /&#160;</string>
    <string name="reset">Reset</string>
    <string name="login">LOGIN</string>
    <string name="by_clicking_on_login_you_are_accepting_our_nterms_amp_conditions"><![CDATA[By clicking on login, you are accepting our\nTerms & Conditions]]></string>
    <string name="search_for_items">Search for items</string>
    <string name="food_and_drinks">Food And Drinks</string>
    <string name="description">Description</string>
    <string name="seller_name">Seller Name</string>
    <string name="error">ERROR</string>
    <string name="ok">OK</string>
    <string name="share_app">Share App</string>
    <string name="my_account">My Account</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="add_new_product">Add New product</string>
    <string name="language">Language</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="app_developer">App Developer</string>
    <string name="others">Others</string>
    <string name="contact_us">Contact Us</string>
    <string name="rate_us">Rate Us</string>
    <string name="english">English</string>
    <string name="inbox">Inbox</string>
    <string name="unread">Unread</string>
    <string name="no_message_available">No Message Available</string>
    <string name="my_products">My Products</string>
    <string name="share">Share</string>
    <string name="no_product_available_for_sale">No Product Available For Sale.</string>
    <string name="categories">Categories</string>
    <string name="see_all">See All</string>
    <string name="to_start_selling_nall_you_need_is_a_title_description_images_and_price">To start selling,\nAll you need is a title, description, images and price.</string>
    <string name="product_title">Product Title</string>
    <string name="choose_category">Choose Category</string>
    <string name="add_product">ADD PRODUCT</string>
    <string name="waiting">Waiting…</string>
    <string name="read">Read</string>
    <string name="report_user">Report User</string>
    <string name="enter_reason">Enter Reason</string>
    <string name="reported">REPORTED</string>
    <string name="thanks_for_report">Thanks for reporting, Our internal team will check this issue.</string>
    <string name="admin">Admin</string>
    <string name="manage_categories">Manage Categories</string>
    <string name="delete_product">Delete Product</string>
    <string name="delete_product_capital">DELETE PRODUCT</string>
    <string name="are_you_sure_to_delete_item">Are you sure you want to delete this product?</string>
    <string name="deleting">Deleting…</string>
    <string name="product_has_deleted">Product has deleted</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>

    <string name="admob_banner_ads_unit">ca-app-pub-4469098252692270/8008076595</string>
    <string name="admob_native_ads_unit" >ca-app-pub-4469098252692270/5291726998</string>
    <string name="admob_interstitial_ads_unit">ca-app-pub-4469098252692270/8560780362</string>

    <string name="verify_your_email">VERIFY YOUR EMAIL</string>
    <string name="updated">UPDATED</string>
    <string name="we_have_sent_verification_link">We have sent verification link on your mail address.</string>
    <string name="your_record_deleted">You record has been deleted.</string>
    <string name="creating_account">Creating Account…</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="select_picture">Select Picture</string>
    <string name="choose_profile_pic">Choose Profile Pic</string>
    <string name="loading">Loading…</string>

</resources>