<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateNewAccount">

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_marginStart="45dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        />
    <LinearLayout
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/applogo"
            />

        <TextView
            android:layout_gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/sfprosemibold"
            android:textSize="18sp"
            android:textColor="#040404"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/sfpromedium2"
                android:textSize="13sp"
                android:textColor="#616161"
                />
            <TextView

                android:id="@+id/signIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/sfpromedium2"
                android:textSize="13sp"
                android:textColor="@color/salmon"
                />
        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_profile"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/man"
            app:civ_border_color="#000"
            app:civ_border_width="1px" />

        <TextView
            android:id="@+id/taptochange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="12sp"
            android:fontFamily="@font/sfpromedium2"
            android:text="@string/tap_to_change"
            android:textColor="#1976D2"
            />
        <EditText
            android:id="@+id/fullName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_back"
            android:hint="@string/full_name"
            android:fontFamily="@font/sfpromedium2"
            android:textSize="13sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:inputType="textEmailAddress"
            />
        <EditText
            android:id="@+id/emailAddress"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_back"
            android:hint="@string/email_address"
            android:fontFamily="@font/sfpromedium2"
            android:textSize="13sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:inputType="textEmailAddress"
            />
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_back"
            android:hint="@string/password"
            android:fontFamily="@font/sfpromedium2"
            android:textSize="13sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:inputType="textPassword"

            />

        <androidx.appcompat.widget.AppCompatButton

            android:id="@+id/createAccountBtn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/transparent_back"
            android:backgroundTint="@color/marsala"
            android:text="@string/create_account"
            android:textSize="12sp"
            android:fontFamily="@font/sfpromedium2"
            android:textColor="#fff"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="24dp"
            >
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:fontFamily="@font/sfpromedium2"
            android:textSize="12sp"
            android:textColor="#616161"
            />

            <TextView
                android:id="@+id/versionName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1.0"
                android:fontFamily="@font/sfpromedium2"
                android:textSize="12sp"
                android:textColor="#616161"
                />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>