<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.GigFragment">
    <RelativeLayout
        android:paddingBottom="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
<ImageView
    android:id="@+id/img_head"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    android:src="@drawable/onlineshop"
    />

    <TextView
        android:layout_marginStart="16dp"
        android:layout_below="@+id/img_head"
        android:id="@+id/myProductText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/my_products"
        android:layout_marginTop="-10dp"
        android:fontFamily="@font/sfprosemibold"
        android:textColor="#040404"
        />
        <TextView
            android:id="@+id/seeUnreadAndRead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:textSize="13sp"
            android:text="@string/share"
            android:layout_alignParentEnd="true"
            android:layout_alignBaseline="@id/myProductText"
            android:fontFamily="@font/sfprosemibold"
            android:textColor="@color/salmon"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:layout_below="@+id/myProductText"
            >
            <TextView
                android:visibility="gone"

                android:id="@+id/message"

                android:text="@string/no_product_available_for_sale"
                android:textSize="12sp"
                android:fontFamily="@font/sfpromedium2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:layout_below="@+id/myProductText"
            android:clipToPadding="false"
            android:scrollbars="none"
            android:id="@+id/recyclerview"
            android:layout_marginTop="10dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            />






    </RelativeLayout>

</ScrollView>